// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authenticate Invalid Password 1`] = `
Array [
  Object {
    "args": Array [
      true,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
]
`;

exports[`authenticate Invalid Password 2`] = `
Object {
  "authentication": Object {
    "accessToken": null,
    "isLoggedIn": false,
    "userId": null,
  },
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "authenticating",
      "initial": [Function],
      "registering": [Function],
    },
    "username": null,
  },
  "users": Object {
    "users": Object {},
  },
}
`;

exports[`authenticate Network Error 1`] = `
Array [
  Object {
    "args": Array [
      true,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "Error: Network Error",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "Error: Network Error",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
]
`;

exports[`authenticate Network Error 2`] = `
Object {
  "authentication": Object {
    "accessToken": null,
    "isLoggedIn": false,
    "userId": null,
  },
  "login": Object {
    "error": "Error: Network Error",
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "authenticating",
      "initial": [Function],
      "registering": [Function],
    },
    "username": null,
  },
  "users": Object {
    "users": Object {},
  },
}
`;

exports[`authenticate Successfully 1`] = `
Array [
  Object {
    "args": Array [
      true,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      Object {
        "displayName": "Test User",
        "email": "test@example.com",
        "userId": "some-user-id",
        "username": "testuser",
      },
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "users.users.some-user-id",
    "revert": [Function],
  },
  Object {
    "args": Array [
      Object {
        "displayName": "Test User",
        "email": "test@example.com",
        "userId": "some-user-id",
        "username": "testuser",
      },
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "users.users.some-user-id",
    "revert": [Function],
  },
  Object {
    "args": Array [
      Object {
        "displayName": "Test User",
        "email": "test@example.com",
        "userId": "some-user-id",
        "username": "testuser",
      },
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "users.users.some-user-id",
    "revert": [Function],
  },
  Object {
    "args": Array [
      Object {
        "accessToken": "some.token.id",
        "expires": "2021-02-19T18:43:41.310201Z",
      },
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "authentication.accessToken",
    "revert": [Function],
  },
  Object {
    "args": Array [
      Object {
        "accessToken": "some.token.id",
        "expires": "2021-02-19T18:43:41.310201Z",
      },
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "authentication.accessToken",
    "revert": [Function],
  },
  Object {
    "args": Array [
      Object {
        "accessToken": "some.token.id",
        "expires": "2021-02-19T18:43:41.310201Z",
      },
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "authentication.accessToken",
    "revert": [Function],
  },
  Object {
    "args": Array [
      Object {
        "accessToken": "some.token.id",
        "expires": "2021-02-19T18:43:41.310201Z",
      },
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "authentication.accessToken",
    "revert": [Function],
  },
  Object {
    "args": Array [
      Object {
        "accessToken": "some.token.id",
        "expires": "2021-02-19T18:43:41.310201Z",
      },
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "authentication.accessToken",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "some-user-id",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "authentication.userId",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "some-user-id",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "authentication.userId",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "some-user-id",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "authentication.userId",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "some-user-id",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "authentication.userId",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "some-user-id",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "authentication.userId",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
]
`;

exports[`authenticate Successfully 2`] = `
Object {
  "authentication": Object {
    "accessToken": Object {
      "accessToken": "some.token.id",
      "expires": "2021-02-19T18:43:41.310201Z",
    },
    "isLoggedIn": false,
    "userId": "some-user-id",
  },
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "authenticating",
      "initial": [Function],
      "registering": [Function],
    },
    "username": null,
  },
  "users": Object {
    "users": Object {
      "some-user-id": Object {
        "displayName": "Test User",
        "email": "test@example.com",
        "userId": "some-user-id",
        "username": "testuser",
      },
    },
  },
}
`;

exports[`cancelLogin Cancelling from the authenticating state 1`] = `
Array [
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
]
`;

exports[`cancelLogin Cancelling from the authenticating state 2`] = `
Object {
  "authentication": Object {
    "accessToken": null,
    "isLoggedIn": false,
    "userId": null,
  },
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "initial",
      "initial": [Function],
      "registering": [Function],
      Symbol(CURRENT_EXIT): undefined,
    },
    "username": null,
  },
  "users": Object {
    "users": Object {},
  },
}
`;

exports[`cancelLogin Cancelling from the initial state 1`] = `
Array [
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
]
`;

exports[`cancelLogin Cancelling from the initial state 2`] = `
Object {
  "authentication": Object {
    "accessToken": null,
    "isLoggedIn": false,
    "userId": null,
  },
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "initial",
      "initial": [Function],
      "registering": [Function],
      Symbol(CURRENT_EXIT): undefined,
    },
    "username": null,
  },
  "users": Object {
    "users": Object {},
  },
}
`;

exports[`cancelLogin Cancelling from the registering state 1`] = `
Array [
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
]
`;

exports[`cancelLogin Cancelling from the registering state 2`] = `
Object {
  "authentication": Object {
    "accessToken": null,
    "isLoggedIn": false,
    "userId": null,
  },
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "initial",
      "initial": [Function],
      "registering": [Function],
      Symbol(CURRENT_EXIT): undefined,
    },
    "username": null,
  },
  "users": Object {
    "users": Object {},
  },
}
`;

exports[`checkUsername When the server call fails 1`] = `
Array [
  Object {
    "args": Array [
      true,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "Error: Network Error",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "Error: Network Error",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
]
`;

exports[`checkUsername When the server call fails 2`] = `
Object {
  "authentication": Object {
    "accessToken": null,
    "isLoggedIn": false,
    "userId": null,
  },
  "login": Object {
    "error": "Error: Network Error",
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "initial",
      "initial": [Function],
      "registering": [Function],
      Symbol(CURRENT_EXIT): undefined,
    },
    "username": null,
  },
  "users": Object {
    "users": Object {},
  },
}
`;

exports[`checkUsername When the username is known 1`] = `
Array [
  Object {
    "args": Array [
      true,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "authenticating",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "authenticating",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "testuser",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "testuser",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
]
`;

exports[`checkUsername When the username is known 2`] = `
Object {
  "authentication": Object {
    "accessToken": null,
    "isLoggedIn": false,
    "userId": null,
  },
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "authenticating",
      "initial": [Function],
      "registering": [Function],
      Symbol(CURRENT_EXIT): undefined,
    },
    "username": "testuser",
  },
  "users": Object {
    "users": Object {},
  },
}
`;

exports[`checkUsername When the username is not known 1`] = `
Array [
  Object {
    "args": Array [
      true,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "registering",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "registering",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "testuser",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "testuser",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
]
`;

exports[`checkUsername When the username is not known 2`] = `
Object {
  "authentication": Object {
    "accessToken": null,
    "isLoggedIn": false,
    "userId": null,
  },
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "registering",
      "initial": [Function],
      "registering": [Function],
      Symbol(CURRENT_EXIT): undefined,
    },
    "username": "testuser",
  },
  "users": Object {
    "users": Object {},
  },
}
`;

exports[`register Invalid Password 1`] = `
Array [
  Object {
    "args": Array [
      true,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
]
`;

exports[`register Invalid Password 2`] = `
Object {
  "authentication": Object {
    "accessToken": null,
    "isLoggedIn": false,
    "userId": null,
  },
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "registering",
      "initial": [Function],
      "registering": [Function],
    },
    "username": null,
  },
  "users": Object {
    "users": Object {},
  },
}
`;

exports[`register Network Error 1`] = `
Array [
  Object {
    "args": Array [
      true,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "Error: Network Error",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "Error: Network Error",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
]
`;

exports[`register Network Error 2`] = `
Object {
  "authentication": Object {
    "accessToken": null,
    "isLoggedIn": false,
    "userId": null,
  },
  "login": Object {
    "error": "Error: Network Error",
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "registering",
      "initial": [Function],
      "registering": [Function],
    },
    "username": null,
  },
  "users": Object {
    "users": Object {},
  },
}
`;

exports[`register Successfully 1`] = `
Array [
  Object {
    "args": Array [
      true,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      Object {
        "displayName": "Test User",
        "email": "test@example.com",
        "userId": "some-user-id",
        "username": "testuser",
      },
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "users.users.some-user-id",
    "revert": [Function],
  },
  Object {
    "args": Array [
      Object {
        "displayName": "Test User",
        "email": "test@example.com",
        "userId": "some-user-id",
        "username": "testuser",
      },
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "users.users.some-user-id",
    "revert": [Function],
  },
  Object {
    "args": Array [
      Object {
        "displayName": "Test User",
        "email": "test@example.com",
        "userId": "some-user-id",
        "username": "testuser",
      },
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "users.users.some-user-id",
    "revert": [Function],
  },
  Object {
    "args": Array [
      Object {
        "accessToken": "some.token.id",
        "expires": "2021-02-19T18:43:41.310201Z",
      },
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "authentication.accessToken",
    "revert": [Function],
  },
  Object {
    "args": Array [
      Object {
        "accessToken": "some.token.id",
        "expires": "2021-02-19T18:43:41.310201Z",
      },
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "authentication.accessToken",
    "revert": [Function],
  },
  Object {
    "args": Array [
      Object {
        "accessToken": "some.token.id",
        "expires": "2021-02-19T18:43:41.310201Z",
      },
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "authentication.accessToken",
    "revert": [Function],
  },
  Object {
    "args": Array [
      Object {
        "accessToken": "some.token.id",
        "expires": "2021-02-19T18:43:41.310201Z",
      },
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "authentication.accessToken",
    "revert": [Function],
  },
  Object {
    "args": Array [
      Object {
        "accessToken": "some.token.id",
        "expires": "2021-02-19T18:43:41.310201Z",
      },
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "authentication.accessToken",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "some-user-id",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "authentication.userId",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "some-user-id",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "authentication.userId",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "some-user-id",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "authentication.userId",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "some-user-id",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "authentication.userId",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "some-user-id",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "authentication.userId",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
]
`;

exports[`register Successfully 2`] = `
Object {
  "authentication": Object {
    "accessToken": Object {
      "accessToken": "some.token.id",
      "expires": "2021-02-19T18:43:41.310201Z",
    },
    "isLoggedIn": false,
    "userId": "some-user-id",
  },
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "registering",
      "initial": [Function],
      "registering": [Function],
    },
    "username": null,
  },
  "users": Object {
    "users": Object {
      "some-user-id": Object {
        "displayName": "Test User",
        "email": "test@example.com",
        "userId": "some-user-id",
        "username": "testuser",
      },
    },
  },
}
`;

exports[`resetLogin Resetting from the authenticating state 1`] = `
Array [
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
]
`;

exports[`resetLogin Resetting from the authenticating state 2`] = `
Object {
  "authentication": Object {
    "accessToken": null,
    "isLoggedIn": false,
    "userId": null,
  },
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "initial",
      "initial": [Function],
      "registering": [Function],
      Symbol(CURRENT_EXIT): undefined,
    },
    "username": null,
  },
  "users": Object {
    "users": Object {},
  },
}
`;

exports[`resetLogin Resetting from the initial state 1`] = `
Array [
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
]
`;

exports[`resetLogin Resetting from the initial state 2`] = `
Object {
  "authentication": Object {
    "accessToken": null,
    "isLoggedIn": false,
    "userId": null,
  },
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "initial",
      "initial": [Function],
      "registering": [Function],
      Symbol(CURRENT_EXIT): undefined,
    },
    "username": null,
  },
  "users": Object {
    "users": Object {},
  },
}
`;

exports[`resetLogin Resetting from the registering state 1`] = `
Array [
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
]
`;

exports[`resetLogin Resetting from the registering state 2`] = `
Object {
  "authentication": Object {
    "accessToken": null,
    "isLoggedIn": false,
    "userId": null,
  },
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "initial",
      "initial": [Function],
      "registering": [Function],
      Symbol(CURRENT_EXIT): undefined,
    },
    "username": null,
  },
  "users": Object {
    "users": Object {},
  },
}
`;
